--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -4,22 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video playback</title>
+    <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/01-gallery.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <iframe
-      id="vimeo-player"
-      src="https://player.vimeo.com/video/236203659"
-      width="640"
-      height="360"
-      frameborder="0"
-      allowfullscreen
-      allow="autoplay; encrypted-media"
-    ></iframe>
+    <!-- Add gallery items to this list -->
+    <ul class="gallery"></ul>
 
-    <script src="js/02-video.js" type="module"></script>
+    <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
